Fixing some overflow issues in layt

--- a/Src/DragqnLD/DragqnLD.Web.Html5/Content/starterkit.css
+++ b/Src/DragqnLD/DragqnLD.Web.Html5/Content/starterkit.css
@@ -12,22 +12,23 @@ body {
     margin: 10% 0 0 0;
 }
 
-.splash .message {
-    font-size: 5em;
-    line-height: 1.5em;
-    -webkit-text-shadow: rgba(0, 0, 0, 0.5) 0 0 15px;
-    text-shadow: rgba(0, 0, 0, 0.5) 0 0 15px;
-    text-transform: uppercase;
-}
+    .splash .message {
+        font-size: 5em;
+        line-height: 1.5em;
+        -webkit-text-shadow: rgba(0, 0, 0, 0.5) 0 0 15px;
+        text-shadow: rgba(0, 0, 0, 0.5) 0 0 15px;
+        text-transform: uppercase;
+    }
 
-.splash .fa-spinner {
-    text-align: center;
-    display: inline-block;
-    font-size: 5em;
-    margin-top: 50px;
-}
+    .splash .fa-spinner {
+        text-align: center;
+        display: inline-block;
+        font-size: 5em;
+        margin-top: 50px;
+    }
 
 .page-host {
+    margin-bottom: 20px;
     position: relative;
     top: 40px;
 }
@@ -38,7 +39,7 @@ body {
 }
 
 .navbar-fixed-top .fa-home {
-    font-size: 18px
+    font-size: 18px;
 }
 
 .loader {
@@ -46,8 +47,30 @@ body {
     visibility: hidden;
 }
 
-.loader.active {
-    visibility: visible;
+    .loader.active {
+        visibility: visible;
+    }
+
+.col-sm-first {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.col-sm-last {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+@media (min-width: 768px) {
+    .col-sm-first {
+        padding-left: 0;
+        padding-right: 15px;
+    }
+
+    .col-sm-last {
+        padding-left: 15px;
+        padding-right: 0;
+    }
 }
 
 @media (max-width: 979px) {
